--- a/app/app.css
+++ b/app/app.css
@@ -156,6 +156,6 @@ login {
   right: 0;
   bottom :0;
   z-index: 0;
-  background: url("img/bg.jpg") no-repeat;
+  background: rgba(0, 0, 0, 0.57);
   background-size: cover;
 }
